--- a/app/src/main/res/layout/fragment_developer.xml
+++ b/app/src/main/res/layout/fragment_developer.xml
@@ -12,36 +12,23 @@
     <ImageView
 
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="260dp"
+        android:layout_width="match_parent"
+        android:layout_height="255dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="221dp"
+        android:layout_marginEnd="0dp"
         android:src="@drawable/ajeet" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView2"
+        android:layout_alignParentEnd="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="181dp"
         android:text="AJEET SINGH"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="191dp"
-        android:layout_height="258dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="9dp"
-        android:src="@drawable/tanya" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView4"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="34dp"
-        android:text="Tanya Agrawal"
-        android:textColor="@color/white"
-        android:textStyle="bold"/>
+
 </RelativeLayout>
