--- a/app/src/main/res/layout/nav_header_profile.xml
+++ b/app/src/main/res/layout/nav_header_profile.xml
@@ -13,7 +13,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="111dp"
         android:layout_height="87dp"
@@ -22,7 +22,7 @@
         android:layout_marginEnd="8dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@mipmap/ic_launcher"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -34,7 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -43,6 +42,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
